<resources>
    <string name="app_name">AutoCosts</string>
    <string name="DV_Inc">by DV Inc.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_delete_all_history">Очистить историю</string>
    <string name="empty_history_text">Нет записей в истории</string>
    <string name="empty_history_start">Начните с добавления новой записи</string>
    <string name="cost_type">Категория</string>
    <string name="date">Дата </string>
    <string name="mileage">Текущий пробег</string>
    <string name="cost_value">Сумма расхода</string>
    <string name="cost_volume">Объем</string>
    <string name="comment">Комментарий</string>
    <string name="photo">Фотография</string>

    <string name="add">Добавить</string>
    <string name="safe">Сохранить</string>
    <string name="delete">Удалить</string>

    <string name="nav_main_title">История расходов</string>
    <string name="nav_stat_title">Статистика</string>
    <string name="nav_info_title">О приложении</string>

    <string name="editor_title_new">Новая запись</string>
    <string name="editor_title_edit_current">Редактирование</string>
    
    <string name="costType_none">Не выбрано</string>
    <string name="costType_oil">Заправка</string>
    <string name="costType_service">Сервис</string>
    <string name="costType_TI">ТО</string>
    <string name="costType_other">Разное</string>

    <string name="editor_insert_entry_failed">Неудачное сохранение</string>
    <string name="editor_insert_entry_successful">Запись сохранена</string>
    <string name="editor_update_entry_failed">Неудачное редактирование</string>
    <string name="editor_update_entry_successful">Запись отредактированна</string>
    <string name="editor_delete_failed">Ошибка при удалении записи</string>
    <string name="editor_delete_successful">Запись удалена</string>

    <string name="date_textview">"Дата "</string>
    <string name="costValue_textview">"Сумма "</string>
    <string name="delete_dialog_msg">Очистить всю историю?</string>
    <string name="delete_dialog_msg2">Удалить запись?</string>
    <string name="delete_history_yes">Да</string>
    <string name="delete_history_no">Нет</string>
    <string name="unsaved_changes_dialog_msg">Выйти без сохранения изменений?</string>

    <string name="editor_small_text_km">км</string>
    <string name="editor_small_text_rubl">р</string>
    <string name="editor_small_text_litr">л</string>

    <string name="choose_action">Выбор действия</string>
    <string name="change_entry">Изменить</string>

    <string name="about">\nПриложение для учета расходов на автомобиль. \n by DV</string>

    <string name="stat_summary">Всего израсходовано</string>
    <string name="stat_fuel">На заправки</string>
    <string name="stat_service">На сервис</string>
    <string name="stat_TI">На TO</string>
    <string name="stat_other">Другие траты</string>
    <string name="stat_average_fuel">Средний расход топлива</string>
    <string name="stat_average_fuel_km">"л на 100км"</string>

    <string name="error_textfield_message">Обязательное поле</string>
    <string name="error_category_message">Нужно выбрать категорию</string>
</resources>
