<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        style="@style/LL_horizontal"
        android:orientation="vertical">
    <LinearLayout
        style="@style/LL_horizontal">
        <TextView
            style="@style/Create_Activity_Elements"
            android:text="@string/cost_type"/>
        <Spinner
            android:id="@+id/spinnerCostType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        style="@style/LL_horizontal">
        <TextView
            style="@style/Create_Activity_Elements"
            android:text="@string/date" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/editDate"
            android:hint="@string/date"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LL_horizontal">
        <TextView
            style="@style/Create_Activity_Elements"
            android:text="@string/mileage"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/editMileage"
            android:hint="@string/mileage"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LL_horizontal">
        <TextView
            style="@style/Create_Activity_Elements"
            android:text="@string/cost_value"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/editCostValue"
            android:hint="@string/cost_value"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LL_horizontal">
        <TextView
            style="@style/Create_Activity_Elements"
            android:text="@string/cost_volume"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editCostVolume"
            android:hint="@string/cost_volume"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LL_horizontal">
        <TextView
            style="@style/Create_Activity_Elements"
            android:text="@string/comment"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/editComment"
            android:hint="@string/comment"/>
    </LinearLayout>

    <LinearLayout
        style="@style/LL_horizontal">
        <TextView
            style="@style/Create_Activity_Elements"
            android:text="@string/photo"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonLoadPhoto"
            android:onClick="loadImageClick"/>
    </LinearLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewPhotoLoad"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"/>
    </FrameLayout>

        <Button
            android:text="@string/safe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSaveEntry"
            android:onClick="onClickSafe"
            android:background="@color/colorAccent"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</ScrollView>